# qikit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: deployment.md  implementation-plan.md
excel-addin/: manifest.json  package-lock.json  package.json  vite.config.ts
excel-addin/src/engine/: doe-core.ts  index.ts  paretochart.ts
excel-addin/tests/: conformance.test.ts  doe-conformance.test.ts
fixtures/experiment/: center_points.json  effects_2x2_known.json  fractional_2x3_1.json  fractional_2x5_2.json  full_factorial_2x2.json  full_factorial_2x3.json  replication.json
fixtures/spc/: anhoej_thresholds_n100.json  anhoej_thresholds_n20.json  bchart_basic.json  c_chart_ucl.json  g_chart_median.json  i_chart_basic.json  i_chart_montgomery.json  i_chart_mr_screening.json  ihi_shift_trend.json  mr_chart_d4.json  nelson_rules.json  p_chart_equal_n.json  p_chart_low_p_floor.json  p_chart_montgomery.json  p_chart_variable_n.json  pareto_basic.json  pp_laney_overdispersion.json  run_chart_no_signal.json  run_chart_signal.json  s_chart_b3b4.json  t_chart_power_transform.json  u_chart_weighted.json  up_laney_overdispersion.json  weco_rules.json  xbar_known_limits.json
scripts/: update_snapshots.py
src/qikit/: __init__.py  core.py  doe.py  render.py  spc.py
src/qikit/render/: doe_plots.py  spc_plots.py  utils.py
tests/: conftest.py  test_conformance.py  test_core.py  test_doe.py  test_phase2.py  test_render.py  test_spc.py
