[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-qikit"
version = "0.1.0a0"
description = "SPC charts and QI tools for healthcare"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "plotly>=5.15"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/qikit"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
